--- a/WebCoreAPI/WebCoreAPI/appsettings.json
+++ b/WebCoreAPI/WebCoreAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=WebCoreApi;Trusted_Connection=True;",
+    "DefaultConnectionCompany": "Server=localhost,1433;Database=WebCoreApi;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
