--- a/WebCoreAPI/WebCoreAPI/appsettings.json
+++ b/WebCoreAPI/WebCoreAPI/appsettings.json
@@ -1,7 +1,9 @@
 {
+  "AppSettings": {
+    "SecretKey": ""
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=WebCoreApi;Trusted_Connection=True;",
-    "DefaultConnectionCompany": "Server=localhost,1433;Database=WebCoreApi;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost,1433;Database=WebCoreApi;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
