--- a/WebCoreAPI/WebCoreAPI/appsettings.Development.json
+++ b/WebCoreAPI/WebCoreAPI/appsettings.Development.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=WebCoreApi;Trusted_Connection=True;",
-    "DefaultConnectionCompany": "Server=localhost,1433;Database=WebCoreApi;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost,1433;Database=WebCoreApi;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
