--- a/WebCoreAPI/WebCoreAPI/appsettings.Development.json
+++ b/WebCoreAPI/WebCoreAPI/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=WebCoreApi;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.;Database=WebCoreApi;Trusted_Connection=True;",
+    "DefaultConnectionCompany": "Server=localhost,1433;Database=WebCoreApi;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
