--- a/WebCoreAPI/WebCoreAPI/appsettings.json
+++ b/WebCoreAPI/WebCoreAPI/appsettings.json
@@ -1,9 +1,10 @@
 {
   "AppSettings": {
-    "SecretKey": ""
+    "SecretKey": "u#A6a&#38^A2AUrKrX^o#Rc0nkqo@*Xc"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=WebCoreApi;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.;Database=WebCoreApi;Trusted_Connection=True;",
+    "DefaultConnectionCompany": "Server=localhost,1433;Database=WebCoreApi;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
