--- a/WebCoreAPI/WebCoreAPI/appsettings.json
+++ b/WebCoreAPI/WebCoreAPI/appsettings.json
@@ -1,6 +1,13 @@
 {
   "AppSettings": {
+    "Issuer": "web-api",
+    "Audience": "web-api",
     "SecretKey": "u#A6a&#38^A2AUrKrX^o#Rc0nkqo@*Xc"
+  },
+  "Jwt": {
+    "Issuer": "intranet-api",
+    "Audience": "intranet-api",
+    "Key": "zLssDd4phQpwOi2iaMRyF1IDxU72cE0U"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=WebCoreApi;Trusted_Connection=True;",
