--- a/WebCoreAPI/WebCoreAPI/appsettings.Development.json
+++ b/WebCoreAPI/WebCoreAPI/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "AppSettings": {
+    "Issuer": "web-api",
+    "Audience": "web-api",
+    "SecretKey": "u#A6a&#38^A2AUrKrX^o#Rc0nkqo@*Xc"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=WebCoreApi;Trusted_Connection=True;",
     "DefaultConnectionCompany": "Server=localhost,1433;Database=WebCoreApi;Trusted_Connection=True;"
