config emotion babel

--- a/react-ui/.babelrc
+++ b/react-ui/.babelrc
@@ -1,5 +1,24 @@
 {
+    "presets": [
+        "@babel/preset-react"
+    ],
     "plugins": [
+        [
+            "@babel/plugin-transform-react-jsx",
+            {
+                "throwIfNamespace": false,
+                "runtime": "automatic",
+                "importSource": "@emotion/react"
+            }
+        ],
+        [
+            "@emotion",
+            {
+                "autoLabel": "dev-only",
+                "labelFormat": "[local]",
+                "cssPropOptimization": true
+            }
+        ],
         [
             "module-resolver",
             {
