--- a/WebCoreAPI/WebCoreAPI/appsettings.json
+++ b/WebCoreAPI/WebCoreAPI/appsettings.json
@@ -2,7 +2,8 @@
   "AppSettings": {
     "Issuer": "web-api",
     "Audience": "web-api",
-    "SecretKey": "u#A6a&#38^A2AUrKrX^o#Rc0nkqo@*Xc"
+    "SecretKey": "u#A6a&#38^A2AUrKrX^o#Rc0nkqo@*Xc",
+    "RefreshTokenTTL": 2
   },
   "Jwt": {
     "Issuer": "intranet-api",
